fix an margin error
Some elements were overlapping in the reports.html page. This has been fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,8 @@ body {
 
 /* Margin properties  */
 .margin-1em {margin: 1em;}
+.margin-top-01em {margin: 0.1em;}
+.margin-top-1em {margin-top: 1em;}
 
 /* STYLE PARTICULAR ELEMENTS  */
 a {
